# annsel

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  biome.jsonc  cliff.toml  hatch.toml  marimo.toml  mise.toml  pyproject.toml  ruff.toml
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  build.yaml  changelog.yaml  prek-autoupdate.yaml  prek.yaml  release-drafter.yaml  release.yaml  test.yaml  zizmor.yaml
docs/: api.md  badges.md  conf.py  contributing.md  index.md  landing.md  references.bib
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst
docs/api/: core.md  datasets.md  extensions.md  index.md  tools.md
docs/extensions/: typed_returns.py
docs/notebooks/: All of Annsel.ipynb  all_of_annsel.ipynb  example.ipynb
marimo/notebooks/: all_of_annsel.py
marimo/scripts/: marimo_build.py
src/annsel/: __init__.py
src/annsel/core/: __init__.py  col.py  expr.py  extensions.py  methods.py  models.py  types.py  typing.py  utils.py
src/annsel/datasets/: __init__.py  _registry.py  basic.py
src/annsel/narwhals_plugin/: __init__.py  dataframe.py  expr.py  namespace.py  utils.py
src/annsel/tl/: __init__.py  _filter.py  _group_by.py  _select.py  _utils.py  anndata.py  basic.py
tests/: conftest.py  test_filter_select_pipe.py  test_unified_api.py  test_utils.py  test_version.py  test_with_obs.py  test_with_var.py  test_xframe.py
tests/benchmarks/: __init__.py  bench_cross_component.py  bench_filter.py  bench_sparse.py  conftest.py
tests/datasets/: test_basic.py
tests/tl/: test_anndata.py  test_basic.py
