[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "annsel"
description = "A Narwhals powered DataFrame-style selection, filtering and indexing operations on AnnData Objects."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "srivarra@stanford.edu" },
]
authors = [ { name = "Sricharan Reddy Varra" } ]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = [ "version" ]
dependencies = [
  "anndata>=0.12",
  "more-itertools>=10.7",
  "narwhals[pandas]>=2.14",
  "pooch>=1.8.2",
  # for debug logging (referenced from the issue template)
  "session-info2",
  "tqdm>=4",
  "universal-pathlib>=0.2",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://annsel.readthedocs.io/"
urls.Homepage = "https://github.com/srivarra/annsel"
urls.Source = "https://github.com/srivarra/annsel"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "coverage",
  # anndata.tests.helpers (used in tests) needs these; not pulled by core anndata under pre-release resolution
  "dask[array]",
  "fast-array-utils",
  "pytest",
  "pytest-cov>=6",
  "pytest-xdist>=3.6.1",
]
doc = [
  "docutils>=0.21.2",
  "ipykernel",
  "ipython",
  "llvmlite>=0.44.0rc2",
  "matplotlib>=3.10",
  "myst-nb>=1.1.2",
  "numba>=0.61.0rc2",
  "pandas",
  "polars",
  "pyarrow",
  "scanpy>=1.11.0rc1",
  "scanpydoc>=0.15.2",
  # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1.3,<8.2",
  "sphinx-autodoc-typehints",
  "sphinx-autosummary-accessors>=2023.4",
  "sphinx-book-theme>=1.1.3",
  "sphinx-copybutton",
  "sphinx-design>=0.6.1",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]
nb = [ "jupyterlab>=4.3.4" ]

[tool.hatch]
version.source = "vcs"
build.targets.wheel.packages = [ "src/annsel" ]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.dependency-groups = [ "doc" ]
envs.hatch-test.matrix = [
  # Test the lowest and highest supported Python versions with normal deps
  { deps = [ "stable" ], python = [ "3.12", "3.13", "3.14" ] },
  # Test the newest supported Python version also with pre-release deps
  { deps = [ "pre" ], python = [ "3.14" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { value = "allow", key = "UV_PRERELEASE", if = [ "pre" ] },
]
envs.hatch-test.dependency-groups = [ "dev", "test" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "E",    # Error detected by Pycodestyle
  "F",    # Errors detected by Pyflakes
  "I",    # isort
  "NPY",  # NumPy-specific rules
  "PD",   # Pandas code
  "PERF", # Perflint
  "PT",   # Pytest
  "PTH",  # pathlib
  "RUF",  # Ruff-specific rules
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008",   # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107",   # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203",   # We don't want a blank line before a class docstring
  "D213",   # <> We want docstrings to start immediately after the opening triple quote
  "D400",   # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D401",   # First line should be in imperative mood; try rephrasing
  "E501",   # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731",   # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741",   # allow I, O, l as variable names -> I is the identity matrix
  "RUF002", # Allow ambiguous characters in docstrings
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = [
  "--import-mode=importlib", # allow using test files with same name
]
ini_options.xfail_strict = true
ini_options.filterwarnings = [
  "ignore::coverage.exceptions.CoverageWarning:",
  "ignore::pytest.PytestUnknownMarkWarning",
]

[tool.coverage]
run.concurrency = [ "multiprocessing" ]
run.omit = [ "**/test_*.py" ]
run.parallel = true
run.source = [ "annsel" ]
report.exclude_also = [ "@(abc\\.)?abstractmethod", "raise NotImplementedError" ]

[tool.cruft]
skip = [
  # Source, tests, and docs — always project-specific
  "src/**",
  "tests/**",
  "docs/**",
  # Project-specific config files
  "CITATION.cff",
  "cliff.toml",
  "uv.lock",
  ".gitignore",
  # CI workflows with project-specific logic
  ".github/workflows/release.yaml",
  ".github/workflows/changelog.yaml",
]
